--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "doppler run -- vite dev --open",
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
@@ -13,6 +13,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@auth/core": "^0.2.5",
+		"@auth/sveltekit": "^0.1.12",
 		"@felte/validator-zod": "^1.0.13",
 		"@iconify/json": "^2.2.6",
 		"@playwright/test": "^1.28.1",
