--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@felte/validator-zod": "^1.0.13",
 		"@iconify/json": "^2.2.6",
 		"@playwright/test": "^1.28.1",
+		"@popperjs/core": "^2.11.6",
 		"@prisma/client": "4.5.0",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@sveltejs/adapter-auto": "^1.0.0",
@@ -48,6 +49,7 @@
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"svelte-i18n": "^3.6.0",
+		"svelte-popperjs": "^1.3.2",
 		"tailwindcss": "^3.2.4",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
