--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@prisma/client": "4.5.0",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-vercel": "^1.0.4",
 		"@sveltejs/kit": "^1.0.0",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.9",
