--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"@sveltejs/kit": "^1.0.0",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.9",
+		"@trpc/client": "^10.9.0",
+		"@trpc/server": "^10.9.0",
 		"@types/bcrypt": "^5.0.0",
 		"@types/luxon": "^3.2.0",
 		"@types/node": "^18.11.18",
@@ -53,6 +55,7 @@
 		"svelte-i18n": "^3.6.0",
 		"svelte-popperjs": "^1.3.2",
 		"tailwindcss": "^3.2.4",
+		"trpc-sveltekit": "^3.2.4",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
