--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"prisma": "4.5.0",
+		"prisma-zod-generator": "^0.8.11",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"svelte-i18n": "^3.6.0",
