--- a/.prettierignore
+++ b/.prettierignore
@@ -7,6 +7,7 @@ node_modules
 .env.*
 !.env.example
 .vercel/*
+/src/lib/i18n/locales/**/*.json
 
 # Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
