--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"svelte-check": "^2.9.2",
 		"svelte-i18n": "^3.6.0",
 		"svelte-popperjs": "^1.3.2",
+		"svelte-tel-input": "^1.1.2",
 		"tailwindcss": "^3.2.4",
 		"trpc-sveltekit": "^3.2.4",
 		"ts-node": "^10.9.1",
