--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
 		"prisma:studio": "doppler run -- prisma studio",
 		"prisma:push": "doppler run -- prisma db push",
 		"prisma:reset": "doppler run -- prisma db push --force-reset && prisma db seed",
-		"prepare": "husky install && prisma generate"
+		"prepare": "husky install && prisma generate",
+		"generate-apis": "openapi-generator-cli generate"
 	},
 	"devDependencies": {
 		"@auth/core": "^0.2.5",
 		"@auth/sveltekit": "^0.1.12",
 		"@felte/validator-zod": "^1.0.13",
 		"@iconify/json": "^2.2.6",
+		"@openapitools/openapi-generator-cli": "^2.5.2",
 		"@playwright/test": "^1.28.1",
 		"@popperjs/core": "^2.11.6",
 		"@prisma/client": "4.5.0",
@@ -53,7 +55,6 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"prisma": "4.5.0",
-		"sib-api-v3-sdk": "^8.5.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"svelte-i18n": "^3.6.0",
