--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "doppler run -- vite dev --open",
 		"build": "doppler run -- vite build",
 		"preview": "doppler run -- vite preview",
-		"test": "playwright test",
+		"test": "playwright test --repeat-each=4",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
