--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"preview": "doppler run -- vite preview",
 		"test": "playwright test",
 		"test:gen": "playwright codegen localhost:5173 --load-storage=playwright-logged-in-state.json",
+		"test:gen:logged-out": "playwright codegen localhost:5173",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
