--- a/package.json
+++ b/package.json
@@ -80,5 +80,9 @@
 	},
 	"lint-staged": {
 		"*.{svelte,ts,html,css,json}": "pnpm run format:staged"
+	},
+	"engines": {
+		"node": ">=18.0.0 <19.0.0",
+		"pnpm": ">=7.0.0 <8.0.0"
 	}
 }
