ci: 👷 update test script

--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
 	"scripts": {
 		"dev": "doppler run -- vite dev --open",
 		"build": "doppler run -- vite build",
+		"build:ci": "vite build",
 		"preview": "doppler run -- vite preview",
+		"preview:ci": "vite preview",
 		"test": "playwright test",
+		"test:ci": "playwright test -c playwright.config.ci.ts",
 		"test:gen": "playwright codegen localhost:5173 --load-storage=playwright-logged-in-state.json",
 		"test:gen:logged-out": "playwright codegen localhost:5173",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
