--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shard: [1, 2, 3, 4]
+        shard: [1, 2, 3, 4, 5, 6, 7, 8]
     steps:
      - uses: actions/checkout@v3
      - uses: pnpm/action-setup@v2
@@ -80,7 +80,7 @@ jobs:
        run: pnpm install
 
      - name: Run Playwright tests
-       run: pnpm test:ci -- --shard=${{ matrix.shard }}/${{ strategy.job-total }}
+       run: pnpm test:ci --shard=${{ matrix.shard }}/${{ strategy.job-total }}
 
      - uses: actions/upload-artifact@v3
        if: always()
