--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ node_modules
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .vercel/*
-playwright-report/
+playwright-report*/
 test-results/
 playwright-logged-in-state.json
