--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,9 @@ env:
   DOPPLER_ENVIRONMENT: ${{ secrets.DOPPLER_ENVIRONMENT }}
 on:
   push:
-   branches-ignore:
-     - main
-     - production
+    branches-ignore:
+      - main
+      - production
 jobs:
   install:
     timeout-minutes: 60
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
+          cache: "pnpm"
 
       - name: Get installed Playwright version
         id: playwright-version
@@ -49,7 +49,7 @@ jobs:
         if: steps.playwright-cache.outputs.cache-hit != 'true'
       - run: npx playwright install-deps
         if: steps.playwright-cache.outputs.cache-hit != 'true'
-        
+
   test:
     name: 🧪 Test (${{ matrix.shard }}/${{ strategy.job-total }})
     needs: install
@@ -60,32 +60,35 @@ jobs:
       matrix:
         shard: [1, 2, 3, 4, 5, 6, 7, 8]
     steps:
-     - uses: actions/checkout@v3
-     - uses: pnpm/action-setup@v2
-       with:
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
           version: 7
-     - uses: actions/setup-node@v3
-       with:
+      - uses: actions/setup-node@v3
+        with:
           node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
- 
-     - name: Cache playwright binaries
-       uses: actions/cache@v3
-       id: playwright-cache
-       with:
-        path: |
-          ~/.cache/ms-playwright
-        key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
+          cache: "pnpm"
+      - name: Get installed Playwright version
+        id: playwright-version
+        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package.json').devDependencies['@playwright/test'].replaceAll('^', ''))")" >> $GITHUB_ENV
 
-     - name: Install dependencies
-       run: pnpm install
+      - name: Cache playwright binaries
+        uses: actions/cache@v3
+        id: playwright-cache
+        with:
+          path: |
+            ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
 
-     - name: Run Playwright tests
-       run: pnpm test:ci --shard=${{ matrix.shard }}/${{ strategy.job-total }}
+      - name: Install dependencies
+        run: pnpm install
 
-     - uses: actions/upload-artifact@v3
-       if: always()
-       with:
-        name: playwright-report-${{ matrix.shard }}_${{ strategy.job-total }}
-        path: playwright-report/
-        retention-days: 30
+      - name: Run Playwright tests
+        run: pnpm test:ci --shard=${{ matrix.shard }}/${{ strategy.job-total }}
+
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report-${{ matrix.shard }}_${{ strategy.job-total }}
+          path: playwright-report/
+          retention-days: 30
