chore: 🔨 add bundle analyzer

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"dev": "doppler run -- vite dev --open",
 		"build": "doppler run -- vite build",
 		"build:ci": "vite build",
+		"build:analyze": "ANALYZE=true doppler run -- vite build",
 		"preview": "doppler run -- vite preview",
 		"preview:ci": "vite preview",
 		"test": "pnpm prisma:reset && playwright test",
@@ -65,6 +66,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"prisma": "4.5.0",
+		"rollup-plugin-visualizer": "^5.9.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"svelte-i18n": "^3.6.0",
