--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
 	},
 	"i18n-ally.localesPaths": ["src/lib/i18n/locales"],
 	"i18n-ally.keystyle": "nested",
-	"typescript.tsdk": "node_modules\\typescript\\lib"
+	"typescript.tsdk": "node_modules\\typescript\\lib",
+	"exportall.config.folderListener": [
+		"/src/lib/schemas",
+		"/src/lib/trpc/routers"
+	]
 }
